# CS5008-DataStructures-Algorithms-and-their-Applications-within-Computer-Systems

./: README.md
hm-labs/: README.md
hm-labs/homework/: history.txt
hm-labs/homework/example/: CMakeLists.txt  example1.c  main.c
hm-labs/homework/hw1-module1/: selection_sort.c  sort
hm-labs/homework/hw10/: CMakeLists.txt  main  main.c  queue.h
hm-labs/homework/hw11/: CMakeLists.txt  Makefile  dijkstra.h  graph.h  main  main.c  minheap.h  prim.h
hm-labs/homework/hw2/: README.MD  dlinkedlist.c  dll  linkedlist.c  sll  vector  vector.c
hm-labs/homework/hw3/: CMakeLists.txt  dlinkedlist.c  dlist.h  dll  linkedlist.c  list.h  sll  vector  vector.c  vector.h
hm-labs/homework/hw4/: CMakeLists.txt  history.txt  main  main.c  writeHistory.c
hm-labs/homework/hw5/: CMakeLists.txt  Makefile  heap.h  main  main.c
hm-labs/homework/hw6/: CMakeLists.txt  README.md  deadlock  deadlock.c  diningPhilosopher.c  diningphilosopher  dp  main  main.c  racecondition  racecondition.c
hm-labs/homework/hw7/: CMakeLists.txt  insertion  insertion.c
hm-labs/homework/hw8/: CMakeLists.txt  brute  bruteforce  bruteforce.c  merge  mergeCount.c  quicksort  quicksort.c
hm-labs/homework/hw9/: CMakeLists.txt  Makefile  bst.h  main  main.c
hm-labs/homework/practicum/: CMakeLists.txt  linked_hashmap.h  main  (+4 more)
team-assignments/: README.md
team-assignments/team-assign3/: CMakeLists.txt
team-assignments/team-assign3/siyangzhang/: CMakeLists.txt  README.md  dlinkedlist.c  linkedlist.c  queue.h  sllq  sllqueue.c  sllstack  sllstack.c  stack.h  vector.c  vq  vqueue.c  vstack  vstack.c
(+104 files in other folders)
